# voiceapp

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/src/: audio.rs  audio_manager.rs  jitter_buffer.rs  lib.rs  main.rs  opus_decode.rs  output.rs  udp_voice.rs  udp_voice_receiver.rs  user_voice_stream.rs  voice.rs
client/tests/: voice_integration_test.rs
common/: Cargo.toml
common/src/: lib.rs  requests.rs  responses.rs
desktop/: Cargo.toml
desktop/src/: config.rs  icons.rs  main.rs
desktop/src/audio/: audio_manager.rs  audio_source.rs  mod.rs
desktop/src/view/: mod.rs
extras/: Cargo.toml  README.md
frontend/: Cargo.toml
frontend/src/: application.rs  colors.rs  config.rs  icon.rs  icons.rs  main.rs  voice_messages.rs  widgets.rs
frontend/src/audio/: audio_manager.rs  audio_source.rs  common.rs  input.rs  mod.rs  notification_player.rs  output.rs
frontend/src/pages/: login.rs  mod.rs  room.rs  settings.rs
frontend/src/state/: audio_manager.rs  config.rs  mod.rs  state.rs  voice_client.rs
frontend/src/view/: login.rs  room.rs  settings.rs  view.rs
protocol/: Cargo.toml  README.md
protocol/src/: error.rs  events.rs  lib.rs  packet.rs  packet_id.rs  requests.rs  responses.rs
protocol/src/io/: reader.rs  writer.rs
sdk/: Cargo.toml  README.md
sdk/src/: api_client.rs  client.rs  error.rs  event_handler.rs  jitter_buffer.rs  lib.rs  tcp_client.rs  udp_client.rs  udp_voice_receiver.rs  user_voice_stream.rs  voice_client.rs  voice_codec.rs  voice_decoder.rs  voice_decoder_manager.rs  voice_encoder.rs  voice_input_output_manager.rs  voice_input_pipeline.rs
sdk/src/network/: api_client.rs  event_handler.rs  mod.rs  tcp_client.rs  udp_client.rs
sdk/src/voice/: decoder.rs  encoder.rs  input_pipeline.rs  io_manager.rs  mod.rs  models.rs  opus_consts.rs  resampler.rs
sdk/src/voice/neteq/: mod.rs  opus_resampling_decoder.rs
server/: Cargo.toml  README.md
server/src/: config.rs  error.rs  event.rs  lib.rs  main.rs  management_server.rs  voice_relay_server.rs
server/src/management/: broadcast.rs  event.rs  handler.rs  mod.rs  server.rs  user.rs  user_handler.rs
server/src/voice/: server.rs  session.rs  user.rs
server/tests/: integration_test.rs
