[package]
name = "voiceapp-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voiceapp-client"
path = "src/main.rs"

[dependencies]
voiceapp-common = { path = "../common" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cpal = "0.16"
opus = "0.3"
rand = "0.8"
