[package]
name = "voiceapp-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voiceapp-frontend"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
voiceapp-sdk = { path = "../sdk" }
iced = { version = "0.14.0", features = ["tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
async-channel = "2.5.0"
chrono = { version = "0.4.42", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
cpal = "0.16"