[package]
name = "voiceapp-frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voiceapp-frontend"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[dependencies]
voiceapp-sdk = { path = "../sdk" }
iced = { version = "0.14.0", features = ["tokio", "debug"] }
iced_aw = { version = "0.13.0", features = ["drop_down", "context_menu"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1"
chrono = { version = "0.4.42", features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
arc-swap = "1.8.0"
cpal = "0.16"
hound = "3.5.1"
rubato = "0.16.2"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"