[package]
name = "voiceapp-protocol"
version = "0.0.1"
edition = "2021"
description = "Binary protocol for voice application client-server communication"
license = "MIT"
keywords = ["protocol", "voice", "binary", "networking"]
categories = ["network-programming", "encoding"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"