[package]
name = "voiceapp-server"
version = "0.0.1"
edition = "2021"
description = "Voice application server with TCP management and UDP voice relay"
license = "MIT"
keywords = ["voice", "server", "networking", "real-time"]
categories = ["network-programming", "multimedia"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
voiceapp-protocol = { path = "../protocol" }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "net", "sync", "macros", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
dashmap = "6.1.0"
thiserror = "2.0.17"